fix: Dockerfile에 Node.js/Tailwind 관련 설정 파일 복사코드 추가